[tool.poetry]
name = "git_practice"
version = "0.1.0"
description = "Git Practice"
authors = ["elklaatu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "1.0.1"
haystack-ai = "2.2.4"
haystack-experimental = "0.1.0"
sentence-transformers = "3.0.1"
transformers = "4.42.3"
gradio = "4.37.2"
huggingface_hub = "0.23.4"
newspaper3k = "0.2.8"
colorama = "0.4.6"
trafilatura = "1.11.0"
jupyterlab = "^4.2.5"
openai = "^1.44.0"
haystack = "^0.42"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
